load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_lcm.bzl",
    "drake_lcm_cc_library",
    "drake_lcm_java_library",
    "drake_lcm_py_library",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
    "drake_py_unittest",
)

load(
    "@drake//tools/skylark:pybind.bzl",
    "drake_pybind_library",
    "get_drake_py_installs",
    "get_pybind_package_info",
    "pybind_py_library",
)

cc_binary(
    name = "collision_detection_test",
    srcs = ["collision_detection_test.cc"],
    data = ["PointMass.urdf"],
    deps = [
        "//common",
        "//multibody:utils",
        "@drake//multibody/plant",
        "@drake//multibody/parsing:parser",
        "@drake//common",
        "@drake//lcm",
        "@gflags",
    ],
)
